# Strategic-Agent-Arena

./: .gitignore  AGENTS.md  README.md  pyproject.toml
algos/: agents.json
algos/contracts/: README.md
algos/cpp/: CMakeLists.txt  README.md
algos/cpp/agents/: greedy_expansion_agent.cpp  mcts_v1.cpp  random_agent.cpp
algos/cpp/examples/: pass_agent.cpp
algos/cpp/include/: saa_protocol.hpp
algos/python/: README.md
docs/: 000_project_vision.md  001_supply_graph_war_design.md  002_agent_contracts.md  003_web_research_lab_design.md
scripts/: run_match.py  run_tournament.py  run_web.py
strategic_agent_arena/: __init__.py
strategic_agent_arena/agents/: __init__.py  base.py  external_process_agent.py  greedy_expansion_agent.py  protocol.py  random_agent.py  registry.py
strategic_agent_arena/envs/: __init__.py
strategic_agent_arena/envs/supply_graph_war/: __init__.py  actions.py  env.py  mapgen.py  rules.py  state.py
strategic_agent_arena/envs/supply_graph_war/maps/: __init__.py  library.py
strategic_agent_arena/evaluation/: __init__.py  match.py  tournament.py
strategic_agent_arena/utils/: seeding.py
strategic_agent_arena/web/: __init__.py  app.py
strategic_agent_arena/web/static/: analysis.html  analysis.js  app.js  develop.html  develop.js  index.html  play.html  play.js  shared.js  styles.css
strategic_agent_arena/web/static/spa/: index.html
tests/: test_actions.py  test_agent_protocol.py  test_agent_registry.py  test_external_process_agent.py  test_mapgen.py  test_match_determinism.py  test_supply_rules.py  test_web_api.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  api.ts  styles.css  types.ts
(+2 files in other folders)
